--- a/contakts.html
+++ b/contakts.html
@@ -18,7 +18,7 @@
 <body>
     <!-- header -->
     <div class="fixHeader">
-<header>
+<header class="page-header">
     <div class="container">
         <a href="./index.html"><span class="web">Web</span><span class="studio up">Studio</span></a>
         <!-- navigation -->
@@ -27,15 +27,15 @@
             <ul class="navigation">
 
                 <li class="studio-after">
-                    <a class="ss" href="./index.html">Студия</a>
+                    <a class="navigation__link" href="./index.html">Студия</a>
                 </li>
 
                 <li>
-                    <a class="ss" href="./portfolio.html">Портфолио</a>
+                    <a class="navigation__link" href="./portfolio.html">Портфолио</a>
                 </li>
 
                 <li>
-                    <a class="ss" href="./contakts.html">Контакты</a>
+                    <a class="navigation__link" href="./contakts.html">Контакты</a>
                 </li>
 
             </ul>
@@ -46,8 +46,8 @@
 
             <li>
                 <a href="mailto:info@devstudio.com">
-                    <span class="alig">
-                        <svg class="adr envelope">
+                    <span class="address-icon">
+                        <svg class="--adr envelope">
                             <use href="./images/icon/defs.svg#a-envelope"></use>
                         </svg>
                     </span>
@@ -60,7 +60,7 @@
             <li>
 
                 <a href="tel:+380961111111">
-                    <span class="alig">
+                    <span class="address-icon">
                         <svg class="smartphone">
                             <use href="./images/icon/defs.svg#a-smartphone"></use>
                         </svg>
