--- a/contakts.html
+++ b/contakts.html
@@ -18,12 +18,12 @@
 <body>
     <!-- header -->
     <div class="fixHeader">
-<header class="page-header">
+<header class="header">
     <div class="container">
-        <a class="logo  web page-header__logo" href="./index.html"><span>Web</span><span
+        <a class="logo  web header__logo" href="./index.html"><span>Web</span><span
                 class="logo--up">Studio</span></a>
         <!-- navigation -->
-        <nav class="page-header__navigation">
+        <nav class="header__navigation">
             <ul class="navigation">
 
                 <li>
@@ -34,7 +34,7 @@
                     <a class="navigation__link" href="./portfolio.html">Портфолио</a>
                 </li>
 
-                <li class="studio-after">
+                <li class="nav-after">
                     <a class="navigation__link" href="./contakts.html">Контакты</a>
                 </li>
 
@@ -42,7 +42,7 @@
 
         </nav>
         <!-- address -->
-        <ul class="page-header__address address">
+        <ul class="header__address address">
             <li class="address__item">
                 <a class="address__link" href="mailto:info@devstudio.com">
                     <svg class="address-icon envelope">
