--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
   <body>
   <!-- header -->
     <header class="header">
-      <div class="container">
-      <a class="logo  web header__logo" href="./index.html"><span>Web</span><span class="logo--up">Studio</span></a>
+      <div class="container header__container">
+      <a class="logo header__logo" href="./index.html">
+        <span>Web</span><span class="logo--up">Studio</span></a>
       <!-- navigation -->
       <nav class="header__nav">
         <ul class="nav">
@@ -41,17 +42,21 @@
         
       </nav>
       <!-- contacsts -->
-      <ul class="header__contacsts contacsts">
-        <li class="contacsts__item">
-          <a class="contacsts__link"  href="mailto:info@devstudio.com">
-            <svg class="contacsts-icon envelope"><use href="./images/icon/defs.svg#a-envelope"></use></svg>
-            <span class="mail">info@devstudio.com</span> 
+      <ul class="header__contacts contacts">
+        <li class="contacts__item">
+          <a class="contacts__link" href="mailto:info@devstudio.com">
+            <svg class="contacts-icon envelope">
+              <use href="./images/icon/defs.svg#a-envelope"></use>
+            </svg>
+            <span class="mail">info@devstudio.com</span>
           </a>
         </li>
     
-        <li class="contacsts__item">
-          <a  class="contacsts__link" href="tel:+380961111111">
-            <svg class="contacsts-icon smartphone"><use href="./images/icon/defs.svg#a-smartphone"></use></svg>
+        <li class="contacts__item">
+          <a class="contacts__link" href="tel:+380961111111">
+            <svg class="contacts-icon smartphone">
+              <use href="./images/icon/defs.svg#a-smartphone"></use>
+            </svg>
             <span class="tel"> +38 096 111 11 11</span>
           </a>
         </li>
@@ -381,7 +386,8 @@
     <footer class="footer">
       <div class="container footer-section">
         <div>
-          <a class="logo footer__logo" href="./index.html"><span>Web</span><span class="logo--down">Studio</span></a>
+          <a class="logo footer__logo" href="./index.html">
+            <span>Web</span><span class="logo--down">Studio</span></a>
             <!-- address -->
           <address class="footer__address">
             <ul class="address">
