--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <!-- header -->
     <header class="header">
       <div class="container">
-        <a class="logo  web header__logo" href="./index.html"><span>Web</span><span class="logo--up">Studio</span></a>
+        <a class="logo header__logo" href="./index.html"><span>Web</span><span class="logo--up">Studio</span></a>
         <!-- navigation -->
         <nav class="header__navigation">
           <ul class="navigation">
@@ -54,7 +54,7 @@
               <svg class="address-icon smartphone">
                 <use href="./images/icon/defs.svg#a-smartphone"></use>
               </svg>
-              <span class="tel"> +38 096 111 11 11</span>
+              <span class="tel">+38 096 111 11 11</span>
             </a>
           </li>
         </ul>
