--- a/index.html
+++ b/index.html
@@ -480,9 +480,10 @@
             </svg>
           </li>
         </ul>
-        <div class="modal-textarea">
-          <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Введите текст"></textarea>
-          <label for="comment">Комментарий</label>
+        <div class="dd">
+          <textarea class="modal-textarea" name="comment" id="comment" cols="30" rows="10" placeholder="Введите текст">
+          </textarea>
+          <label  class="modal-labelarea" for="comment">Комментарий</label>
         </div>
         <!-- id="check" -->
         <div class="modal__checkbox">
