--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="button__close modal-button button" type="button" data-modal-close>
-          <svg class="modal-close">
+        <button type="button" class="btn-modal" data-modal-close>
+          <svg class="close-form">
             <use href="./images/icon/m-defs.svg#close-blue-18dp"></use>
           </svg>
         </button>
@@ -459,7 +459,7 @@
           <li>
             <input autofocus type="text" name="name" id="name" placeholder="Игорь Демьяненко" >
             <label for="name">Имя</label>
-            <svg class="modal-icon">
+            <svg class="icon-modal">
               <use href="./images/icon/m-defs.svg#person-black-18dp-1"></use>
             </svg>
           </li>
@@ -467,7 +467,7 @@
           <li>
             <input type="tel" name="tel" id="tel" placeholder="+380 96 111 11 11">
             <label for="tel">Телефон</label>
-            <svg class="modal-icon">
+            <svg class="icon-modal">
               <use href="./images/icon/m-defs.svg#phone-black-18dp-1"></use>
             </svg>
           </li>
@@ -475,26 +475,25 @@
           <li>
             <input type="email" name="mail" id="mail" placeholder="info@devstudio.com">
             <label for="mail">Почта</label>
-            <svg class="modal-icon">
+            <svg class="icon-modal">
               <use href="./images/icon/m-defs.svg#email-black-18dp-1"></use>
             </svg>
           </li>
         </ul>
-        <div class="dd">
-          <textarea class="modal-textarea" name="comment" id="comment" cols="30" rows="10" placeholder="Введите текст">
-          </textarea>
-          <label  class="modal-labelarea" for="comment">Комментарий</label>
+        <div class="cont-textarea">
+          <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Введите текст"></textarea>
+          <label for="comment">Комментарий</label>
         </div>
         <!-- id="check" -->
         <div class="modal__checkbox">
-        <label class="modal__checklabel">
+        <label class="check-modal">
           <input class="checkbox" type="checkbox" name="check" >
-          <span class="checkbox__icon"></span>
+          <span class="icon-check"></span>
           Соглашаюсь с рассылкой и принимаю 
         </label>
-        <a class="modal__link"> Условия договора</a>
+        <a class="us"> Условия договора</a>
         </div>
-        <button class="button__submit modal_button button" type="submit" >Отправить</button>
+        <button type="submit" >Отправить</button>
       </div>
     </div>
     <script src="./js/modal.js">
