--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h1 class="hero__title">
           Эффективные решения <br> для вашего бизнеса
         </h1>
-        <button class="hero__btn button__main button" type="button" data-modal-open>
+        <button class="hero__btn" type="button" data-modal-open>
           Заказать услугу
         </button>
       </section>
