--- a/portfolio.html
+++ b/portfolio.html
@@ -70,19 +70,19 @@
           <!-- <h2 class="invisible">catalog</h2> -->
           <ul class="filter">
             <li>
-              <button class="button__Filter button"  type="button">Всё</button>
+              <button class="filter__btn button__Filter1 button1"  type="button">Всё</button>
             </li>
             <li>
-              <button class="button__Filter button"  type="button">Веб сайты</button>
+              <button class="filter__btn button__Filter1 button1"  type="button">Веб сайты</button>
             </li>
             <li>
-              <button class="button__Filter button"  type="button">Проложения</button>  
+              <button class="filter__btn button__Filter1 button1"  type="button">Проложения</button>  
             </li>
             <li>
-              <button class="button__Filter button"  type="button">Дизайн</button>
+              <button class="filter__btn button__Filter1 button1"  type="button">Дизайн</button>
             </li>
             <li>
-              <button class="button__Filter button"  type="button">Маркетинг</button>
+              <button class="filter__btn button__Filter1 button1"  type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="catalog container">
